// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu opens and closes on click 1`] = `
<div
  class="StyledDrop-bCWxPe cBGaUc"
  tabindex="-1"
  id="menu-drop__test"
  style="left: 0px; width: 0.1px; top: 0px; max-height: 768px;"
>
  <div
    class="StyledBox-bStriS iSfEjW"
    direction="column"
  >
    <button
      class="StyledButton-gXzblK eMXCzV"
      tabindex="0"
      aria-label="Close Menu"
      type="button"
    >
      <div
        class="StyledBox-bStriS kZGdzl"
        direction="row"
      >
        <div
          class="StyledBox-bStriS kyUkeU"
          direction="column"
        >
          Test
        </div>
        <svg
          class="StyledIcon-gTfjEw htxeRg"
          width="24px"
          height="24px"
          viewBox="0 0 24 24"
          version="1.1"
          role="img"
          aria-label="FormDown"
        >
          <polyline
            fill="none"
            stroke="#000"
            stroke-width="2"
            points="18 9 12 15 6 9"
          />
        </svg>
      </div>
    </button>
    <div
      class="StyledBox-bStriS iSfEjW"
      direction="column"
    >
      <button
        class="StyledButton-gXzblK fmBjBd"
        tabindex="0"
        disabled=""
        type="button"
      >
        <div
          class="StyledBox-bStriS jtjnXL"
          direction="row"
        >
          Item 1
        </div>
      </button>
      <button
        class="StyledButton-gXzblK fXMbaK"
        tabindex="0"
        type="button"
      >
        <div
          class="StyledBox-bStriS jtjnXL"
          direction="row"
        >
          Item 2
        </div>
      </button>
      <a
        class="StyledButton-gXzblK fXMbaK"
        tabindex="0"
        href="/test"
      >
        <div
          class="StyledBox-bStriS jtjnXL"
          direction="row"
        >
          Item 3
        </div>
      </a>
    </div>
  </div>
</div>
`;

exports[`Menu opens and closes on click 2`] = `
"@media only screen and (min-width:700px) {
  .jYQWcg {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eMXCzV {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fmBjBd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fXMbaK {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}



.cBGaUc {
  font-family: 'Work Sans',Arial,sans-serif;
  font-size: 1em;
  line-height: 1.5;
  color: #333333;
  background-color: #FFFFFF;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  border-radius: 0px;
  box-shadow: 0px 3px 8px rgba(100,100,100,0.50);
  position: fixed;
  z-index: 20;
  overflow: auto;
  outline: none;
  background-color: #f8f8f8;
  color: #333333;
  opacity: 0;
  -webkit-transform-origin: top left;
  -ms-transform-origin: top left;
  transform-origin: top left;
  -webkit-animation: grow-box 0.1s forwards;
  animation: grow-box 0.1s forwards;
  -webkit-animation-delay: 0.01s;
  animation-delay: 0.01s;
}

.cBGaUc * {
  box-sizing: inherit;
}"
`;

exports[`Menu renders 1`] = `
<div>
  <button
    class="StyledButton-gXzblK jYQWcg"
    tabindex="0"
    id="item"
    aria-label="Open Menu"
    type="button"
  >
    <div
      class="StyledBox-bStriS jtjnXL"
      direction="row"
    >
      <svg />
    </div>
  </button>
</div>
`;

exports[`Menu with custom message renders 1`] = `
<div>
  <button
    class="StyledButton-gXzblK jYQWcg"
    tabindex="0"
    aria-label="Abrir Menu"
    type="button"
  >
    <div
      class="StyledBox-bStriS jtjnXL"
      direction="row"
    >
      <div
        class="StyledBox-bStriS kyUkeU"
        direction="column"
      >
        Test Icon
      </div>
      <svg
        class="StyledIcon-gTfjEw htxeRg"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Menu with dropAlign renders 1`] = `
<button
  class="StyledButton-gXzblK jYQWcg"
  tabindex="-1"
  id="menu"
  aria-label="Open Menu"
  type="button"
  data-g-tabindex="0"
>
  <div
    class="StyledBox-bStriS jtjnXL"
    direction="row"
  >
    <div
      class="StyledBox-bStriS kyUkeU"
      direction="column"
    >
      Test
    </div>
    <svg
      class="StyledIcon-gTfjEw htxeRg"
      width="24px"
      height="24px"
      viewBox="0 0 24 24"
      version="1.1"
      role="img"
      aria-label="FormDown"
    >
      <polyline
        fill="none"
        stroke="#000"
        stroke-width="2"
        points="18 9 12 15 6 9"
      />
    </svg>
  </div>
</button>
`;

exports[`Menu with dropAlign renders 2`] = `
"

.jYQWcg {
  cursor: pointer;
  outline: none;
  font: inherit;
  text-decoration: none;
  font: inherit;
  margin: 0;
  background-color: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  border: none;
  padding: 0;
}

@media only screen and (min-width:700px) {
  .jYQWcg {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .eMXCzV {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fmBjBd {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fXMbaK {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .fYAaIT {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;
